Fix small responsive issues (truncate column name when too long; margin of boards area not visible )

--- a/src/stylesheets/components/Home/_board.scss
+++ b/src/stylesheets/components/Home/_board.scss
@@ -34,6 +34,8 @@
     display: flex;
     gap: rem(24);
 
+    width: max-content;
+
     padding: 1.5rem 1rem;
 
     min-height: 100%;
