--- a/src/stylesheets/components/Home/_column.scss
+++ b/src/stylesheets/components/Home/_column.scss
@@ -18,7 +18,15 @@
   }
 
   &__heading {
-    line-height: 100%;
+    display: flex;
+    align-items: baseline;
+  }
+
+  &__heading-text {
+    max-width: rem(200);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   &__color {
